보안/유틸 경고 정리 및 타입 개선